crates/mockiato-compiletest/tests/ui/const_method.stderr
error: `const` methods are not supported
 --> $DIR/const_method.rs:7:5
  |
7 |     const fn bar(&self, baz: u64);
  |     ^^^^^
  |
note: Required for mockable traits
 --> $DIR/const_method.rs:5:1
  |
5 | #[mockable]
  | ^^^^^^^^^^^

error[E0379]: trait fns cannot be declared const
 --> $DIR/const_method.rs:7:5
  |
7 |     const fn bar(&self, baz: u64);
  |     ^^^^^ trait fns cannot be const

For more information about this error, try `rustc --explain E0379`.
